# python-comment-strip

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  rmcom.py
.github/workflows/: python-app.yml
docs/: index.md
docs/samples/: index.md  removed_comments.json
tests/: test_rmcom.py
